# cc-branch

./: .cc-branch.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh.md  SECURITY.md  TASKS.md  UI_UX_OPTIMIZATIONS.md  pyproject.toml  setup.py
.cc-branch/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-python.yml  release-desktop.yml
apps/: package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: brand-directions.html  design-candidates.html  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
cc_branch/: __init__.py  adapters.py  agent_registry.py  agents.yaml  backends.py  bootstrap.py  cli.py  config.py  constants.py  context.py  desktop_backend.py  doctor.py  exceptions.py  models.py  openers.py  planner.py  profiles.py  repository.py  runtime.py  runtime_capabilities.py  runtime_sync.py  sessions.py  shells.py  state.py  targets.py  templates.py  text.py
cc_branch/adapters/: __init__.py  base.py  none.py  resume.py  selection.py
cc_branch/agent_registry/: __init__.py  builtins.py  io.py  loader.py  models.py  paths.py
cc_branch/app_state/: __init__.py  paths.py  project_index.py
cc_branch/application/: __init__.py  agent_sessions.py  diagnostics.py  global_agents.py  results.py  runtime_environment.py  session_binding.py  state_store.py  workspace_status.py
cc_branch/bootstrap/: __init__.py  environment.py  files.py  generation.py  models.py  sessions.py
cc_branch/cli/: __init__.py  constants.py  dispatch.py  errors.py  help.py  output.py  parser.py  targets.py
cc_branch/config/: __init__.py  initialization.py  loading.py  normalization.py  paths.py
cc_branch/doctor/: __init__.py  autofix.py  checks.py  messages.py  (+1 more)
discussions/: cc-connect-analysis.md  cc-connect-inspirations.md  cc-switch-analysis.md  cc-switch-inspirations.md
docs/: README.md  agent-session-discovery-audit.md  architecture-application-layer-spec.md  architecture.md  config-layout-options.html  contributing.md  dashboard-ux-comparison.html  features.md  getting-started.md  github-actions.md  github-release-checklist.md  global-project-index-spec.md  install-troubleshooting.md  module-package-candidates.md  multi-config-spec.md  openers-refactor-spec.md  opening-flow.md  package-architecture-spec.md  publishing.md  quickstart.md  release-readiness-review.md  session-discovery-binding-spec.md  user-guide.md  user-use-conditions.md  ux-state-matrix.md  webui-dashboard2-spec.md  webui-sidebar-spec.md  webui-spec.md  webui-userflow.md  workspace-canvas-wysiwyg-options.html  workspace-terminology.zh.md
examples/: README.md  agent-branch.yaml  scenario-long-term.yaml  scenario-multi-project.yaml  scenario-solo-dev.yaml
scripts/: build-desktop-sidecar.py  build-webui.py  generate-icons.py
tests/: test_agent_sessions.py  test_app_state.py  test_application_architecture.py  test_bootstrap.py  test_cli.py  test_config.py  test_context.py  test_desktop_backend.py  test_desktop_sidecar_build.py  test_desktop_tauri_config.py  test_doctor.py  test_global_agents.py  test_openers.py  test_planner.py  test_runtime_backends.py  test_session_binding.py  test_state.py  test_templates.py  test_webui.py  test_workspace.py
(+221 files in other folders)
