[package]
name = "cc-branch"
version = "0.1.1"
description = "CC Branch Desktop App"
authors = ["GeminiLight"]
license = "MIT"
repository = "https://github.com/GeminiLight/cc-branch"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cc_branch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "time"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
portpicker = "0.1"
log = "0.4"
